--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div id="app" class="w-full max-w-lg bg-white shadow-2xl rounded-2xl p-6 md:p-10 border-t-8 border-primary">
         <h1 class="text-3xl font-bold text-center text-gray-800 mb-2">Trening Słownictwa i Zwrotów</h1>
-        <p class="text-center text-gray-500 mb-6">Wpisywanie & Wielokrotny wybór</p>
+        <p class="text-center text-gray-500 mb-6">TEST Wpisywanie & Wielokrotny wybór</p>
         
         <!-- Sekcja Zakładek/Trybów -->
         <div class="flex border-b border-gray-300 mb-6">
