Add download link for Unit 1 CSV in import section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
             "spelling", etc. <br />• Without header: 2-4 columns (auto-detected)
             <br />• Pronunciations/spellings are optional (can be empty columns)
           </p>
+          <p>
+            <a
+              href="https://raw.githubusercontent.com/mmeller/fiszki/refs/heads/main/unit1.csv"
+              download
+              target="_blank"
+              >Unit 1</a
+            >
+          </p>
 
           <div class="upload-area">
             <input type="file" id="csv-file" accept=".csv" />
