--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
               target="_blank"
               >Unit 1</a
             >
+            <a href="https://drive.google.com/drive/folders/1S0-hq4oLpNMj__dZOqC34eq_-NZXkwli?usp=drive_link" target="_blank"
+              >Sample CSV Files</a>
           </p>
 
           <div class="upload-area">
