--- a/index.html
+++ b/index.html
@@ -216,10 +216,29 @@
       <div id="list-tab" class="tab-content">
         <div class="section">
           <h2>Word List</h2>
-          
-          <div class="category-filter" style="margin-bottom: 20px; padding: 15px; background: #f7fafc; border-radius: 8px;">
-            <label style="display: block; margin-bottom: 10px; font-weight: 600;">Filter by Category:</label>
-            <select id="list-category-filter" style="width: 100%; padding: 10px; border: 2px solid #e2e8f0; border-radius: 8px; font-size: 14px;">
+
+          <div
+            class="category-filter"
+            style="
+              margin-bottom: 20px;
+              padding: 15px;
+              background: #f7fafc;
+              border-radius: 8px;
+            "
+          >
+            <label style="display: block; margin-bottom: 10px; font-weight: 600"
+              >Filter by Category:</label
+            >
+            <select
+              id="list-category-filter"
+              style="
+                width: 100%;
+                padding: 10px;
+                border: 2px solid #e2e8f0;
+                border-radius: 8px;
+                font-size: 14px;
+              "
+            >
               <option value="all">All Categories</option>
             </select>
           </div>
@@ -227,6 +246,13 @@
           <div id="word-list-container">
             <div id="no-words-list-message" class="message">
               No words available. Please import words first.
+            </div>
+
+            <div id="word-list-actions" class="hidden" style="margin-bottom: 15px; display: flex; gap: 10px; align-items: center;">
+              <button id="select-all-words-btn" class="btn btn-secondary">Select All</button>
+              <button id="deselect-all-words-btn" class="btn btn-secondary">Deselect All</button>
+              <button id="delete-selected-words-btn" class="btn btn-danger">Delete Selected</button>
+              <span id="selected-count" style="margin-left: 10px; font-weight: 600; color: #4a5568;"></span>
             </div>
 
             <div id="word-list" class="word-list"></div>
