Format word list actions HTML for better readability

--- a/index.html
+++ b/index.html
@@ -248,11 +248,29 @@
               No words available. Please import words first.
             </div>
 
-            <div id="word-list-actions" class="hidden" style="margin-bottom: 15px; display: flex; gap: 10px; align-items: center;">
-              <button id="select-all-words-btn" class="btn btn-secondary">Select All</button>
-              <button id="deselect-all-words-btn" class="btn btn-secondary">Deselect All</button>
-              <button id="delete-selected-words-btn" class="btn btn-danger">Delete Selected</button>
-              <span id="selected-count" style="margin-left: 10px; font-weight: 600; color: #4a5568;"></span>
+            <div
+              id="word-list-actions"
+              class="hidden"
+              style="
+                margin-bottom: 15px;
+                display: flex;
+                gap: 10px;
+                align-items: center;
+              "
+            >
+              <button id="select-all-words-btn" class="btn btn-secondary">
+                Select All
+              </button>
+              <button id="deselect-all-words-btn" class="btn btn-secondary">
+                Deselect All
+              </button>
+              <button id="delete-selected-words-btn" class="btn btn-danger">
+                Delete Selected
+              </button>
+              <span
+                id="selected-count"
+                style="margin-left: 10px; font-weight: 600; color: #4a5568"
+              ></span>
             </div>
 
             <div id="word-list" class="word-list"></div>
