Clean up debug logging from categories.html
- Remove temporary debug console.log statements
- Categories are now properly syncing and displaying
- HybridSyncManager integration working correctly

--- a/categories.html
+++ b/categories.html
@@ -557,25 +557,39 @@
           try {
             // Initialize local database
             await this.localDb.init();
-            
+
             // Initialize Supabase if configured
-            if (SUPABASE_CONFIG.url !== 'YOUR_SUPABASE_URL' && 
-                SUPABASE_CONFIG.anonKey !== 'YOUR_SUPABASE_ANON_KEY') {
-                try {
-                    this.supabaseDb = new SupabaseDB(SUPABASE_CONFIG.url, SUPABASE_CONFIG.anonKey);
-                    this.syncManager = new HybridSyncManager(this.localDb, this.supabaseDb, SYNC_CONFIG);
-                    await this.syncManager.init();
-                    this.db = this.syncManager;
-                    console.log('✅ Categories page: Using HybridSyncManager with Supabase');
-                } catch (error) {
-                    console.warn('⚠️ Supabase initialization failed, using local-only mode:', error);
-                    this.db = this.localDb;
-                }
-            } else {
-                console.log('ℹ️ Supabase not configured, using local-only mode');
+            if (
+              SUPABASE_CONFIG.url !== "YOUR_SUPABASE_URL" &&
+              SUPABASE_CONFIG.anonKey !== "YOUR_SUPABASE_ANON_KEY"
+            ) {
+              try {
+                this.supabaseDb = new SupabaseDB(
+                  SUPABASE_CONFIG.url,
+                  SUPABASE_CONFIG.anonKey
+                );
+                this.syncManager = new HybridSyncManager(
+                  this.localDb,
+                  this.supabaseDb,
+                  SYNC_CONFIG
+                );
+                await this.syncManager.init();
+                this.db = this.syncManager;
+                console.log(
+                  "✅ Categories page: Using HybridSyncManager with Supabase"
+                );
+              } catch (error) {
+                console.warn(
+                  "⚠️ Supabase initialization failed, using local-only mode:",
+                  error
+                );
                 this.db = this.localDb;
+              }
+            } else {
+              console.log("ℹ️ Supabase not configured, using local-only mode");
+              this.db = this.localDb;
             }
-            
+
             await this.loadCategories();
             await this.loadStatistics();
           } catch (error) {
